--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "test": "./node_modules/.bin/mocha tests/**/*spec.js",
-    "test:tdd": "./node_modules/.bin/mocha tests/**/*spec.js --watch"
+    "test": "./node_modules/.bin/mocha tests/**/*spec.js --require babel-register",
+    "test:tdd": "./node_modules/.bin/mocha tests/**/*spec.js  --require babel-register --watch"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/klasrak/js-tdd-course#readme",
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
