--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test:tdd": "./node_modules/.bin/mocha tests/**/*spec.js  --require babel-register --watch",
     "test:coverage": "nyc npm test"
   },
+  "nyc": {
+    "reporter": ["text", "html"],
+    "exclude": ["tests/**"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/klasrak/js-tdd-course.git"
